modify navbar to fixed and added z-index

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+}
+
 .navbar {
     display: flex;
     justify-content: space-around;
@@ -11,6 +16,9 @@
     height: 60px;
     width: 100%;
     padding: 4px;
+    position: fixed;
+    z-index: 100;
+    
     
     
     
@@ -30,6 +38,7 @@
 .navbar a {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.543);
+    
 }
  
 
@@ -66,7 +75,9 @@
     border-radius: 50px;
     padding: 20px;
 }
-
+.profile {
+    
+}
 
 .profile-desc {
     text-align: center;
@@ -77,6 +88,7 @@
     margin: 20px;
     box-shadow: 1px 0px 20px 1px white;
     border-radius: 50px;
+    
 }
 
 .profile-desc:hover {
@@ -95,6 +107,27 @@
     color: rgb(217, 230, 230);
 }
 
+.bio {
+    color: teal;
+    
+}
+.myself {
+    border: 1px solid white;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0.331);
+    color: goldenrod;
+    box-shadow: 1px 0px 20px 1px white;
+}
+
+.myself:hover {
+    background-color: snow;
+    color: slateblue;
+    transition: 3s;
+    transform: scale(1.1);
+}
+
 .name {
     background-color: rgba(217, 230, 230, 0.735);
     width: 100%;
@@ -108,7 +141,7 @@
     background-color: snow;
     color: slateblue;
     transition: 3s;
-    transform: scale(1.5);
+    transform: scale(1.1);
 }
 .address {
     background-color: rgba(217, 230, 230, 0.735);
@@ -143,7 +176,7 @@
 .email:hover {
     background-color: slateblue;
     transition: 5s;
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 .email a:hover {
@@ -164,7 +197,7 @@
 .call:hover {
     background-color: royalblue;
     transition: 2s;
-    transform: scale(1.3);
+    transform: scale(1.1);
     
 }
 
@@ -351,7 +384,7 @@
 
  .contact {
      text-align: center;
-     margin-left: 30%;
+     margin-left: 18%;
     padding-bottom: 40px;
      width: 300px;
      height: 20%;
